--- a/styles/detalle.module.css
+++ b/styles/detalle.module.css
@@ -9,20 +9,18 @@
     height: auto;
     margin-left: 50px;
   }
-  .mi-boton {
-    display: inline-block;
-    padding: 24px 24px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
+  .red-button {
+    width: 100px;
+    height: 50px;
+    background-color: rgba(107, 15, 33, 0.618);
+    color: red;
+    border: 2px solid red;
+    border-radius: 5px;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
+    transition: background-color 0.3s ease;
   }
   
-  .mi-boton:hover {
-    background-color: #0062cc;
-    transform: translateY(-2px);
+  .red-button:hover {
+    background-color: red;
+    color: white;
   }
